Fix notif and submit button on smaller screens

--- a/dcrm/website/static/css/style.css
+++ b/dcrm/website/static/css/style.css
@@ -158,6 +158,10 @@ textarea:focus, textarea:focus{
         font-size: 1.5rem !important;
         font-family: 'Roboto';
     }
+
+    .nav-submit {
+        margin-top: 1em !important;
+    }
 }
 
 @media (max-width: 576px) {
